# pykms

./: .pylintrc  README.md  gen.py  gen.sh  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  pylint.yml
kms/: __init__.py  atomicreq.py  blob.py  card.py  connector.py  crtc.py  drawing.py  drmevent.py  drmobject.py  drmproperty.py  drmpropobject.py  encoder.py  enums.py  framebuffer.py  helpers.py  kms_kernel.py  pixelformats.py  plane.py  resource_manager.py  videomode.py
kms/kernel/: __init__.py  kms.py
kms/uapi/: __init__.py  ctypes_preamble.py  dma_heap.py  kms.py
tests/: test_install.py  tests.py
utils/: alpha-test.py  db.py  dmabuf-consumer.py  dmabuf-producer.py  draw-perf-test.py  dual-display.py  hpd.py  kmsprint.py  kmstest.py  pic.py  simple-example.py  simple-test.py  test-pixfmts.py  test.py  zpos.py
utils/kmscube/: cube_egl.py  cube_gl.py  kmscube-drm.py  kmscube-x11.py
