[build-system]
requires = ['setuptools >= 61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'pykms'
version = '0.1'

dependencies = [
  'pixutils @ git+https://github.com/tomba/pixutils.git',
]

requires-python = '>=3.8'
authors = [
  {name = 'Tomi Valkeinen', email = 'tomi.valkeinen@ideasonboard.com'},
]
maintainers = [
  {name = 'Tomi Valkeinen', email = 'tomi.valkeinen@ideasonboard.com'},
]
description = 'Pure-Python kms bindings'
readme = 'README.md'
license = {file = 'LICENSE.md'}
keywords = ['linux', 'kms', 'drm']
classifiers = [
  'Programming Language :: Python',
  'License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)',
  'Development Status :: 4 - Beta',
  'Operating System :: POSIX :: Linux',
]

[project.urls]
Homepage = 'https://github.com/tomba/pykms'
Repository = 'https://github.com/tomba/pykms.git'
'Bug Tracker' = 'https://github.com/tomba/pykms/issues'

[tool.setuptools]
packages = ['kms', 'kms.uapi']

[tool.ruff]
line-length = 100
extend-exclude = ['kms/uapi/']

[tool.ruff.lint]
extend-select = ['E', 'W', 'F', 'FA', 'Q', 'UP', 'PLE', 'PLW']
ignore = ['E741', 'E501', 'Q001', 'E702', 'UP032']  # TODO: fix E501

[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['F401', 'F403']

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'single'

[tool.ruff.format]
quote-style = 'single'

[project.optional-dependencies]
extras = [
    'pyopengl',
    'numpy',
    'Pillow',
    'pyudev',
    'xcffib',
    'pygbm @ git+https://github.com/tomba/pygbm.git',
]
